Docs/03-terraform-resources/44-create-ec2-instance-resource-using-terraform-01-depends_on/c4-eip.tf
#Resource-9 creating elastic ip

resource "aws_eip" "DEV_web_server_eip" {
  instance = aws_instance.MY_DEV_VM.id
  vpc = true
  #Meta aurgement
  depends_on = [ aws_internet_gateway.DEV_IGW ]

 tags = {
   "Name" = "DEV_webserver_eip"
 }

}
